styles/style.css
@font-face {
    font-family: 'HurmitNerdFont';
    src: url('/assets/Hermit/HurmitNerdFont-Regular.woff2') format('woff2'),
        url('/assets/Hermit/HurmitNerdFont-Regular.ttf') format('truetype');
    font-weight: normal;
    font-style: normal;
}

* {
    padding: 0px;
    margin: 0px;
    text-decoration: none;
    box-sizing: border-box;
}

ul {
    list-style: none;
    padding: 0px;
    margin: 0px;
}

hr {
    border: solid 1px #8AB2CE;
    width: 100%;
    margin: 7px 0;
}


a {
    display: block;
    color: #8AB2CE;
    text-decoration: none;
    width: 137px;
    background-color: #0A131D;
    border: solid 1px #8AB2CE;
    padding: 10px;
    border-radius: 17px;
    text-align: center;
    transition: 0.37s ease;
}

a:hover,
a:hover>hr {
    background-color: #8AB2CE;
    color: #0A131D;
    border-color: #0A131D;
}

html {
    scroll-behavior: smooth;
}

body {
    background-color: #0A131D;
    display: flex;
    flex-direction: column;
    align-items: center;
    /* Keep align-items to center horizontally */
    /* justify-content: center; */
    /* Remove or change this */
    min-height: 100vh;
    /* Change height to min-height */
    width: 100vw;
    font-size: 17px;
    padding: 0 17px 17px 17px;
    color: #8AB2CE;
    text-align: center;
}

header {
    width: 100vw;
    height: 100vh;
    align-items: center;
    justify-content: center;
    display: flex;
    flex-direction: column;
}

.nav-bar {
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    align-items: center;
    width: 100vw;
    padding: 17px;
    background-color: #0A131D;
    width: 100vw;
    height: auto;
    position: sticky;
    top: 0;
    z-index: 1;
}

.nav-bar>li {
    padding: 17px;
}

a:has(.a7r-logo) {
    display: flex;
    align-items: center;
    justify-content: center;
    background-color: transparent;
    width: auto;
    border: none;
}

.a7r-logo {
    width: 37vw;
}

main {
    flex: 1;
    width: 100%;
}

.card {
    padding: 17px;
    margin: 17px 0;
    border: solid 1px #8AB2CE;
    border-radius: 17px;
    width: 100%;
}

.section {
    padding: 17vh 17px;
}

@media (min-width: 768px) {

    body {
        background-color: #0A131D;
        display: flex;
        flex-direction: column;
        /* Keep flex-direction */
        align-items: center;
        /* Keep align-items to center horizontally */
        /* justify-content: center; */
        /* Remove or change this */
        min-height: 100vh;
        /* Change height to min-height */
        width: 100vw;
    }

    header {
        position: -webkit-sticky;
        /* For Safari */
        position: sticky;
        top: 0;
        background-color: #0A131D;
        /* Ensure it's not transparent */
        z-index: 1000;
        /* Keeps it above other content */
        width: auto;
        height: auto;
    }

    .nav-bar {
        display: flex;
        flex-direction: row;
        justify-content: space-between;
        align-items: center;
        width: 100%;
        background-color: #0A131D;
        width: 100vw;
    }

    a:has(.a7r-logo) {
        display: flex;
        align-items: center;
        justify-content: center;
    }

    .a7r-logo {
        width: 17vw;
    }

    main {
        flex: 1;
    }

    .card-group {
        display: grid;
        grid-template-columns: 1fr 1fr 1fr;
        grid-template-rows: auto auto;
        gap: 17px;
        width: 100%;
    }
}

